# reso-single

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  readme.md  requirements.txt  test_mem0.py
.claude/: settings.json
sql/: 001_core_tables.sql  002_domain_tables.sql  003_alter_existing_tables.sql
src/agent/: graph.py  prompts.py  state.py
src/agent/nodes/: context_hydration.py  wellness_agent.py
src/agents/: base.py  fitness.py  medical.py  nutrition.py
src/gateway/: app.py  schemas.py
src/gateway/middleware/: auth.py  rate_limit.py  tracing.py
src/gateway/routes/: chat.py
src/infra/: config.py  db.py  logger.py  mem0_client.py  redis_client.py
src/orchestrator/: graph.py  prompts.py  state.py
src/orchestrator/nodes/: aggregator.py  classify_route.py  context_hydration.py  free_flow.py  mode_classifier.py  router.py
src/tools/: __init__.py  fitness.py  medical.py  multimodal.py  nutrition.py  profile.py
static/: index.html
tests/: test_feature10_llm_providers.py  test_feature11_vector_stores.py  test_feature12_embedders.py  test_feature13_rerankers.py  test_feature6_custom_extraction.py  test_feature7_update_memory.py  test_feature8_openai_compat.py  test_feature9_oss_config.py
